# braidMgr

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  REMAINING-WORK.md  config.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  raid-cli  requirements.txt  setup_dev_environment.sh
.github/workflows/: ci.yml  deploy-docs.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241224_0001_001_initial_schema.py  20241224_0002_002_auth_tables.py
backend/scripts/: import_yaml.py  sample-raid-log.yaml
backend/src/api/: __init__.py  main.py
backend/src/api/dependencies/: __init__.py  auth.py
backend/src/api/middleware/: __init__.py  correlation.py  error_handler.py  request_logging.py
backend/src/api/routes/: __init__.py  auth.py  health.py
backend/src/api/schemas/: __init__.py  auth.py
backend/src/config/: __init__.py  settings.py
backend/src/domain/: __init__.py  auth.py
backend/src/repositories/: __init__.py  login_attempt_repository.py  oauth_account_repository.py  password_reset_repository.py  refresh_token_repository.py  user_repository.py
backend/src/services/: __init__.py  aurora_service.py  auth_service.py  base_service.py
backend/src/utils/: __init__.py  exceptions.py  jwt.py  logging.py  security.py
backend/tests/: conftest.py
backend/tests/unit/: test_auth_dependencies.py  test_exceptions.py  test_jwt.py  test_logging.py  test_middleware.py  test_routes.py  test_security.py  test_services.py  test_settings.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  PATTERNS.md  PROCESS_FLOWS.md  REQUIREMENTS.md  STATUS.yaml  USER_STORIES.md  backlog.md  index.md
docs/architecture/: ai-integration.md  api-design.md  auth-rbac.md  database.md  deployment.md  frontend.md  project-structure.md  services.md  tech-stack.md
docs/data-model/: access-chat-entities.md  budget-entities.md  core-entities.md  enums-architecture.md  item-entities.md
docs/flows/: auth-flows.md  budget-flows.md  chat-flows.md  crud-flows.md  export-flows.md  item-lifecycle.md  permission-flows.md  tenancy-flows.md
docs/patterns/: async-patterns.md  error-handling.md  logging.md  middleware.md  react-patterns.md  repository-patterns.md  service-patterns.md  testing.md  validation-patterns.md
docs/requirements/: enterprise.md  feature-parity.md  web-platform.md
docs/stories/: seq-01-foundation.md  seq-02-authentication.md  seq-03-core-data.md  seq-04-views.md  seq-05-budget.md  seq-06-pwa.md  seq-07-multi-user.md  seq-08-multi-org.md  seq-09-portfolios.md  seq-10-ai-chat.md  seq-11-attachments.md  seq-12-exports.md  seq-13-sso.md  seq-14-global-search.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: ForgotPasswordForm.test.tsx  ForgotPasswordForm.tsx  LoginForm.test.tsx  LoginForm.tsx  RegisterForm.test.tsx  RegisterForm.tsx  index.ts
frontend/src/lib/: api.ts  auth.test.tsx  auth.tsx  indicators.test.ts  utils.ts
frontend/src/test/: setup.ts
frontend/tests/: demo-walkthrough.spec.ts
resources/: AppIcon.icns
src/: __init__.py
src/cli/: __init__.py  commands.py
src/core/: __init__.py  budget.py  budget_import.py  exports.py  indicators.py  models.py  yaml_store.py
src/ui/: __init__.py  app.py
src/ui/views/: __init__.py  budget.py  dashboard.py  items.py
src/ui_qt/: __init__.py  app.py  dialogs.py  styles.py
src/ui_qt/views/: __init__.py  active.py  budget.py  chronology.py  dashboard.py  help.py  items.py  timeline.py
tests/: conftest.py  test_budget.py  test_core.py  test_exports.py  test_indicators.py  test_models.py  test_paths.py  test_templates.py  test_yaml_store.py
