# =============================================================================
# BRAID Manager - Briefcase Configuration
# =============================================================================
# Build cross-platform desktop app with: briefcase build
# Run in dev mode with: briefcase dev
# Create installer with: briefcase package
# =============================================================================

[project]
name = "braidmanager"
version = "1.0.0"
description = "Desktop application for managing BRAID logs (Budget, Risks, Action Items, Issues, Decisions)"
requires-python = ">=3.10"
license.text = "MIT"
authors = [
    {name = "Centric Consulting"}
]
keywords = ["project-management", "raid-log", "desktop-app"]

dependencies = [
    "pyyaml>=6.0",
    # PySide6 specified per-platform in Briefcase config to use Essentials package
]

[project.optional-dependencies]
dev = [
    "briefcase>=0.3.17",
    "pytest>=7.0",
]

# =============================================================================
# Briefcase App Configuration
# =============================================================================

[tool.briefcase]
project_name = "BRAID Manager"
bundle = "com.centricconsulting.braidmanager"
version = "1.0.0"
url = "https://centricconsulting.com"
license = "MIT"
author = "Centric Consulting"
author_email = "info@centricconsulting.com"

[tool.briefcase.app.braidmanager]
formal_name = "BRAID Manager"
description = "Desktop application for managing BRAID logs"
long_description = """BRAID Manager is a desktop application for tracking Budget, Risks,
Action Items, Issues, and Decisions for project management."""
icon = "resources/AppIcon"
sources = ["braidmanager", "src"]
test_sources = ["tests"]

# =============================================================================
# macOS Configuration
# =============================================================================

[tool.briefcase.app.braidmanager.macOS]
requires = [
    "PySide6-Essentials>=6.6.0",  # Smaller package without WebEngine
]
universal_build = true

# Remove unused Qt modules to reduce app size
# We only need QtCore, QtGui, QtWidgets
cleanup_paths = [
    "app_packages/PySide6/Qt/lib/Qt3D*",
    "app_packages/PySide6/Qt/lib/QtBluetooth*",
    "app_packages/PySide6/Qt/lib/QtCharts*",
    "app_packages/PySide6/Qt/lib/QtConcurrent*",
    "app_packages/PySide6/Qt/lib/QtDataVisualization*",
    "app_packages/PySide6/Qt/lib/QtDesigner*",
    "app_packages/PySide6/Qt/lib/QtHelp*",
    "app_packages/PySide6/Qt/lib/QtLocation*",
    "app_packages/PySide6/Qt/lib/QtMultimedia*",
    "app_packages/PySide6/Qt/lib/QtNetwork*",
    "app_packages/PySide6/Qt/lib/QtNfc*",
    "app_packages/PySide6/Qt/lib/QtOpenGL*",
    "app_packages/PySide6/Qt/lib/QtPdf*",
    "app_packages/PySide6/Qt/lib/QtPositioning*",
    "app_packages/PySide6/Qt/lib/QtPrint*",
    "app_packages/PySide6/Qt/lib/QtQml*",
    "app_packages/PySide6/Qt/lib/QtQuick*",
    "app_packages/PySide6/Qt/lib/QtRemoteObjects*",
    "app_packages/PySide6/Qt/lib/QtScxml*",
    "app_packages/PySide6/Qt/lib/QtSensors*",
    "app_packages/PySide6/Qt/lib/QtSerialPort*",
    "app_packages/PySide6/Qt/lib/QtShaderTools*",
    "app_packages/PySide6/Qt/lib/QtSpatialAudio*",
    "app_packages/PySide6/Qt/lib/QtSql*",
    "app_packages/PySide6/Qt/lib/QtSvg*",
    "app_packages/PySide6/Qt/lib/QtTest*",
    "app_packages/PySide6/Qt/lib/QtTextToSpeech*",
    "app_packages/PySide6/Qt/lib/QtVirtualKeyboard*",
    "app_packages/PySide6/Qt/lib/QtWeb*",
    "app_packages/PySide6/Qt/lib/QtXml*",
    "app_packages/PySide6/Qt/plugins/designer",
    "app_packages/PySide6/Qt/plugins/multimedia",
    "app_packages/PySide6/Qt/plugins/position",
    "app_packages/PySide6/Qt/plugins/qmltooling",
    "app_packages/PySide6/Qt/plugins/sensors",
    "app_packages/PySide6/Qt/plugins/sqldrivers",
    "app_packages/PySide6/Qt/plugins/texttospeech",
    "app_packages/PySide6/Qt/plugins/virtualkeyboard",
    "app_packages/PySide6/Qt/qml",
    "app_packages/PySide6/Qt/translations",
]

[tool.briefcase.app.braidmanager.macOS.app]
# Build a .app bundle

[tool.briefcase.app.braidmanager.macOS.dmg]
# Build a .dmg installer (optional - run: briefcase package macOS dmg)

# =============================================================================
# Windows Configuration
# =============================================================================

[tool.briefcase.app.braidmanager.windows]
requires = [
    "PySide6-Essentials>=6.6.0",
]

[tool.briefcase.app.braidmanager.windows.app]
# Build standalone Windows app

[tool.briefcase.app.braidmanager.windows.msi]
# Build .msi installer (optional - run: briefcase package windows msi)

# =============================================================================
# Linux Configuration (for completeness)
# =============================================================================

[tool.briefcase.app.braidmanager.linux]
requires = [
    "PySide6-Essentials>=6.6.0",
]
system_requires = []

[tool.briefcase.app.braidmanager.linux.appimage]
# Build AppImage
